# ai-3

a1-ai-3-github-readme-commit-2/: README.md  pyproject.toml
a1-ai-3-github-readme-commit-2/app/: __init__.py  chunking.py  config.py  embedding.py  generator.py  ingestion.py  main.py  models.py  parsers.py  quota.py  retrieval.py  storage.py
a1-ai-3-github-readme-commit-2/data/tenants/tenant_a/: keyword_index.json  manifest.json  usage.json
a1-ai-3-github-readme-commit-2/data/tenants/tenant_a/files/: 2b95614c-d135-4dfa-867b-91da23e3bb17_hybrid.txt  38a4d2fc-89b3-47f6-a089-c2f4d95393a0_sla.txt  647f2940-60f7-4d36-8f2f-8a56d784b4a1_常见问题.txt  7ffb9973-1a58-471d-9a3b-e484c28c65f9_policy.txt  97b25bbb-ab4e-4d90-bc9a-494dbc384612_handbook.md  b50643fd-7c42-4b1d-815f-9690054510fd_demo_knowledge.txt  c5222582-fe86-4d52-8fc6-7a478e12dda8_a.txt
a1-ai-3-github-readme-commit-2/data/tenants/tenant_b/: manifest.json  usage.json  vector_index.json
a1-ai-3-github-readme-commit-2/data/tenants/tenant_b/files/: 46b3029c-1b88-4d6c-a8e3-8dfa219ad49f_b.txt  508e81e1-7cea-4be2-8533-61a4fadaf663_security.txt
a1-ai-3-github-readme-commit-2/data/tenants/tenant_c/: keyword_index.json  manifest.json  usage.json
a1-ai-3-github-readme-commit-2/docs/: DECISIONS.md
a1-ai-3-github-readme-commit-2/samples/tenant_a/: demo_knowledge.txt
a1-ai-3-github-readme-commit-2/samples/tenant_c/: playbook.md
a1-ai-3-github-readme-commit-2/tenant_ai_qa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
a1-ai-3-github-readme-commit-2/tests/: test_app.py
